--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.10)
 project(Abacus)
 
 # 读取源文件列表
@@ -7,7 +7,9 @@ if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(x86|X86|amd|AMD)")
     set(OPT "-mavx2")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(aarch|AARCH|arm|ARM)")
     aux_source_directory(${CMAKE_SOURCE_DIR}/src-arm64 SOURCES)
-    set(OPT "-mfpu=neon")
+    if (NOT CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(aarch64|AARCH64)")
+        set(OPT "-mfpu=neon")
+    endif()
 endif()
 
 # 创建目标
