--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.10)
 project(AbacusTest)
 
 # 读取源文件列表
@@ -20,6 +20,11 @@ if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(x86|X86|amd|AMD)")
                             PROPERTIES
                             COMPILE_FLAGS
                             "-std=c++11 -O3 -fopenmp -mavx2")
+elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(aarch64|AARCH64)")
+    set_target_properties(${PROJECT_NAME} 
+                        PROPERTIES
+                        COMPILE_FLAGS
+                        "-std=c++11 -O3 -fopenmp")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "(aarch|AARCH|arm|ARM)")
     set_target_properties(${PROJECT_NAME} 
                         PROPERTIES
